# google_drive_docs_api_drf

./: .flake8  .gitignore  README.md  pyproject.toml
src/: .env.example  config.py
src/core/: settings.py  urls.py
src/google_docs/: apps.py  serializers.py  services.py  views.py
